# EPAD_geant4

./: .gitignore  CMakeLists.txt  G4History.macro  README.md  coded_aperture_position.txt  electron_detector_main.cc  init_vis.mac  mosaic_decoding_matrix_13.txt  run_geant.sh  vis.mac  vis1.mac  vis_ca.mac
analysis/: ang_res_v_focal_length.py  compare_theoreticaldist.py  create_1sigma_plots.py  deconvolve_and_plot.py  find_total_uncertainty.py  fnc_calc_angle_per_particle.py  fnc_find_theoretical_dist.py  fnc_get_det1_hits.py  fnc_get_det_hits.py  one_sigma_vs_thick.py  plot_geom_loops_results.py  plot_parallel_beam.py  plot_settings.py  process_geom_loops.py  run_geometry_loops.py  run_over_angles  run_over_angles.py  run_parallel_beam.py  run_particle_beams.py  sampling_sin.py
analysis/fncs/: fnc_calc_angle_per_particle.py  plotResultsFile.py
data/: hits.csv  hits_1MeV_10e3.csv  hits_500keV_100e3_windowbehind.csv  hits_500kev_nowindow.csv  hits_infront.csv  hits_parallel_beamtest.csv  hits_winbehind.csv  hits_windowon.csv  init_pos.csv  results.txt
data/angular/: hits_0.csv  hits_1.csv  hits_10.csv  hits_11.csv  hits_12.csv  hits_13.csv  hits_14.csv  hits_15.csv  hits_16.csv  hits_17.csv  hits_2.csv  hits_3.csv  hits_4.csv  hits_5.csv  hits_6.csv  hits_7.csv  hits_8.csv  hits_9.csv
data/two_detector_config/data_hist_no_win/: hits_0p100.csv
data/window_simulation/: hits_1mm_100um_13mosaic.csv  hits_1mm_150um_13mosaic.csv  hits_1mm_20um_13mosaic.csv  hits_1mm_250um_13mosaic.csv  hits_1mm_50um_13mosaic.csv  hits_1mm_60um_13mosaic.csv  hits_3mm_100um_13mosaic.csv  hits_3mm_150um_13mosaic.csv  hits_3mm_20um_13mosaic.csv  hits_3mm_250um_13mosaic.csv  hits_3mm_50um_13mosaic.csv  hits_3mm_60um_13mosaic.csv  hits_5mm_100um_13mosaic.csv  hits_5mm_150um_13mosaic.csv  hits_5mm_20um_13mosaic.csv  hits_5mm_250um_13mosaic.csv  hits_5mm_50um_13mosaic.csv  hits_5mm_60um_13mosaic.csv  hits_nowindow_43mosaic.csv  hits_nowindow_61.csv  hits_windowfarinfront_61.csv
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  HistoManager.hh  Hit.hh  MyRun.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorAction_PS.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  SensitiveDetector.hh  SteppingAction.hh  TrackingAction.hh
macros/: auto_run_beams.mac  auto_run_file.mac  run_1_angle.mac  run_PAD.mac  run_angle_beam.mac  run_beams.mac  run_example.mac  run_parallel_beam.mac  run_pt_src.mac  run_real_stuff.mac  run_sphere.mac  run_surface.mac  vis_raytracer_ex.mac
src/: ActionInitialization.cc  ActionInitialization_DS.cc  ActionInitialization_PS.cc  DetectorConstruction.cc  DetectorConstruction_CA.cc  EventAction.cc  EventAction_CA.cc  EventAction_TD.cc  HistoManager.cc  Hit.cc  MyRun.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction_DS.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  RunAction_DS.cc  RunAction_PS.cc  SensitiveDetector.cc  SensitiveDetector_CA.cc  SensitiveDetector_TD.cc  SteppingAction.cc  TrackingAction.cc  ca_config.txt  coded_aperture_array_13.txt  coded_aperture_array_61.txt  config.txt  det_config.txt  detector_config.txt  egg_crate.gdml  egg_crate_CarbonFibre.gdml  egg_crate_CarbonFibre.stl  lens_pyramid.gdml  lens_pyramid_Tungsten.gdml  lens_pyramid_Tungsten.stl  mosaic_coded_aperture_array_47.txt  mosaic_coded_aperture_array_5.txt  mosiac_coded_aperture_array_13.txt  mosiac_coded_aperture_array_43.txt
src/CAD_files/: aperture.gdml  fov_limiter.gdml  lens_hood.gdml  lens_hood_Tungsten.gdml  lens_hood_Tungsten.stl  lens_pyramid.gdml  square.gdml  square_Tungsten.stl
src/CAD_files/lens_pyramid_Tungsten_/: lens_pyramid_Tungsten_13_1.gdml  lens_pyramid_Tungsten_19_1.gdml  lens_pyramid_Tungsten_19_3.gdml  lens_pyramid_Tungsten_23_4.gdml  lens_pyramid_Tungsten_23_5.gdml  lens_pyramid_Tungsten_41_1.gdml  lens_pyramid_Tungsten_41_3.gdml  lens_pyramid_Tungsten_73_1.gdml  lens_pyramid_Tungsten_73_3.gdml  lens_pyramid_Tungsten_97_1.gdml  lens_pyramid_Tungsten_97_2.gdml
src/mask_designs/: 101MURA_matrix.txt  101mosaicMURA_matrix_88.44.txt  11mosaicMURA_matrix.txt  11mosaicMURA_matrix_63.txt  11mosaicMURA_matrix_73.txt  11mosaicMURA_matrix_84.txt  11mosaicMURA_matrix_95.44.txt  11mosaicMURA_matrix_95.45.txt  11mosaicMURA_matrix_95.46.txt  127mosaicMURA_decode_matrix.txt  127mosaicMURA_matrix_73.txt  127mosaicMURA_matrix_82.txt  127mosaicMURA_matrix_90.txt  139MURA_matrix.txt  13mosaicMURA_matrix_95.00.txt  13mosaicMURA_matrix_96.16.txt  181MURA_matrix.txt  19mosaicMURA_matrix_97.37.txt  1MURA_matrix_0.66.txt  1MURA_matrix_0.69.txt  1MURA_matrix_14.08.txt  1MURA_matrix_21.90.txt  1MURA_matrix_43.50.txt  23mosaicMURA_matrix_40.05.txt  23mosaicMURA_matrix_76.50.txt  23mosaicMURA_matrix_9.90.txt  23mosaicMURA_matrix_97.81.txt  23mosaicMURA_matrix_97.83.txt  23mosaicMURA_matrix_99.0.txt  29mosaicMURA_matrix_98.27.txt  29mosaicMURA_matrix_98.28.txt  37mosaicMURA_decode_matrix.txt  37mosaicMURA_matrix_30.txt  37mosaicMURA_matrix_60.txt  37mosaicMURA_matrix_73.txt  37mosaicMURA_matrix_82.txt  37mosaicMURA_matrix_90.txt  41mosaicMURA_matrix_98.76.txt  41mosaicMURA_matrix_98.77.txt  41mosaicMURA_matrix_98.78.txt  (+34 more)
src/src/: ActionInitialization_PS.cc  DetectorConstruction_CA.cc  EventAction_CA.cc  Hit.cc  MyRun.cc  PrimaryGeneratorAction_DS.cc  PrimaryGeneratorAction_PS.cc  RunAction_PS.cc  SensitiveDetector_CA.cc  SensitiveDetector_TD.cc  SteppingAction.cc  ca_config.txt  det_config.txt  lens_pyramid.gdml  lens_pyramid_Aluminum_58.gdml
src/src/CAD_files/: aperture_Tungsten.gdml  fov_limiter_Tungsten.gdml  square_Tungsten.gdml
src/src/CAD_files/lens_pyramid_Tungsten_/: lens_pyramid_Tungsten_11_1.gdml  lens_pyramid_Tungsten_11_3.gdml  lens_pyramid_Tungsten_11_4.gdml  lens_pyramid_Tungsten_11_5.gdml  lens_pyramid_Tungsten_19_2.gdml  lens_pyramid_Tungsten_23_3.gdml  lens_pyramid_Tungsten_29_1.gdml  lens_pyramid_Tungsten_29_2.gdml  lens_pyramid_Tungsten_41_2.gdml  lens_pyramid_Tungsten_41_4.gdml  lens_pyramid_Tungsten_41_5.gdml  lens_pyramid_Tungsten_59_1.gdml  lens_pyramid_Tungsten_59_2.gdml  lens_pyramid_Tungsten_59_3.gdml  lens_pyramid_Tungsten_73_2.gdml
